--- a/default.conf
+++ b/default.conf
@@ -1,18 +1,14 @@
-upstream backend {
-        server app:5000;
-}
-
 server {
-        listen 80 default_server;
-        listen [::]:80 default_server;
-        server_name _;
-        location /api {
-                rewrite /api(.*) /$1  break;
-                proxy_pass http://backend;
-                proxy_redirect     off;
-                proxy_set_header   Host                 $http_host;
-                proxy_set_header   X-Real-IP            $remote_addr;
-                proxy_set_header   X-Forwarded-For      $proxy_add_x_forwarded_for;
-                proxy_set_header   X-Forwarded-Proto    $scheme;
-        }
+    listen 80;
+    server_name localhost;
+
+    location / {
+        proxy_set_header   Host                 $host;
+        proxy_set_header   X-Real-IP            $remote_addr;
+        proxy_set_header   X-Forwarded-For      $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Proto    $scheme;
+        proxy_set_header Host $http_host;
+
+        proxy_pass http://app:5000;
+    }
 }
