--- a/docker/nginx/conf.d/file-serv.conf
+++ b/docker/nginx/conf.d/file-serv.conf
@@ -1,13 +1,10 @@
-upstream flask {
-    server app:5000;
-}
-
 server {
 
     listen 80;
+    server_name file-serv.ru;
 
     location / {
-        proxy_pass http://flask;
+        proxy_pass http://app:5000;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
