--- a/docker/nginx/conf.d/file-serv.conf
+++ b/docker/nginx/conf.d/file-serv.conf
@@ -2,6 +2,7 @@ server {
 
     listen 80;
     server_name file-serv.ru;
+    client_max_body_size 6M;
 
     location / {
         proxy_pass http://app:5000;
