--- a/docker/nginx/conf.d/file-serv.conf
+++ b/docker/nginx/conf.d/file-serv.conf
@@ -3,6 +3,10 @@ server {
     listen 80;
     server_name file-serv.ru;
     client_max_body_size 6M;
+    proxy_connect_timeout       300;
+    proxy_send_timeout          300;
+    proxy_read_timeout          300;
+    send_timeout                300;
 
     location / {
         proxy_pass http://app:5000;
