add minIO to Docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,18 +7,34 @@ services:
     ports:
       - 80:80
 
+  minio:
+    image: docker.io/bitnami/minio:2022
+    environment:
+      MINIO_ROOT_USER: "minio-user"
+      MINIO_ROOT_PASSWORD: "minio-password"
+    ports:
+      - 9000:9000
+      - 9001:9001
+    volumes:
+      - ./docker/minio/data/:/data
+
   app-sync:
     build:
       dockerfile: Dockerfile
     environment:
       DB_URL: "postgresql://file_user:pswd@postgres/file_database"
+
+      MINIO_SERVER_HOST: "minio-server"
+      MINIO_SERVER_ACCESS_KEY: "minio-access-key"
+      MINIO_SERVER_SECRET_KEY: "minio-secret-key"
+
       UPLOAD_FOLDER_NAME: "user_files"
       TMP_FOLDER_NAME: "tmp_dir"
       ROOT_DIR: '/file_storage'
       PATH_SEPARATOR: "/"
     volumes:
-      - ./docker/cron/logs/output.log:/logs/output.log
-      - ./docker/cron/logs/err.log:/logs/err.log
+      - ./docker/minio/credentials:/root/.aws/credentials
+      - ./docker/cron/logs/:/logs/
       - ./docker/file_storage:/file_storage
       - ./src:/app/src
     command: crond -f -d 8
@@ -28,6 +44,8 @@ services:
     build:
       dockerfile: Dockerfile
     environment:
+      MINIO_URL: 'http://minio:9000'
+      DEFAULT_BUCKET_NAME: 'default'
       DB_URL: "postgresql://file_user:pswd@postgres/file_database"
       UPLOAD_FOLDER_NAME: "user_files"
       TMP_FOLDER_NAME: "tmp_dir"
