add yandex cloud connection

--- a/.env.yandex
+++ b/.env.yandex
@@ -1,7 +1,7 @@
 MODE=MINIO
-BOTO_URL=http://minio:9000
-BOTO_PROFILE=default
-DEFAULT_BUCKET_NAME=default
+BOTO_URL=https://storage.yandexcloud.net
+BOTO_PROFILE=yandex
+DEFAULT_BUCKET_NAME=ddmit04yandexbucket
 DB_URL=postgresql://file_user:pswd@postgres/minio_file_database
 UPLOAD_FOLDER_NAME=
 ROOT_DIR=/
