--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,7 @@
+#Идентификатор ключа:
+#YCAJE82N0tZdfgJnkdguNw2He
+#Ваш секретный ключ:
+#YCMSjCJoVXXEUIR55W5ArfALVDc7BheNMsae9HKX
 services:
   nginx:
     image: nginx:latest
@@ -20,7 +24,8 @@ services:
       dockerfile: Dockerfile
     environment:
       MODE: ${MODE}
-      MINIO_URL: ${MINIO_URL}
+      BOTO_URL: ${BOTO_URL}
+      BOTO_PROFILE: ${BOTO_PROFILE}
       DEFAULT_BUCKET_NAME: ${DEFAULT_BUCKET_NAME}
       DB_URL: ${DB_URL}
       UPLOAD_FOLDER_NAME: ${UPLOAD_FOLDER_NAME}
@@ -39,7 +44,8 @@ services:
       dockerfile: Dockerfile
     environment:
       MODE: ${MODE}
-      MINIO_URL: ${MINIO_URL}
+      BOTO_URL: ${BOTO_URL}
+      BOTO_PROFILE: ${BOTO_PROFILE}
       DEFAULT_BUCKET_NAME: ${DEFAULT_BUCKET_NAME}
       DB_URL: ${DB_URL}
       UPLOAD_FOLDER_NAME: ${UPLOAD_FOLDER_NAME}
