clean up configs

--- a/.env
+++ b/.env
@@ -1,16 +1,18 @@
 MODE=MINIO
-MINIO_URL=http://minio:9000
+BOTO_URL=http://minio:9000
 DEFAULT_BUCKET_NAME=default
-DB_URL=postgresql://file_user:pswd@postgres/file_database
-UPLOAD_FOLDER_NAME=user_files
-ROOT_DIR=/file_storage
-PATH_SEPARATOR=/
-MAX_CONTENT_LENGTH=6M
+BOTO_PROFILE=default
 
+MINIO_ROOT_USER=minio-user
+MINIO_ROOT_PASSWORD=minio-password
+
+DB_URL=postgresql://file_user:pswd@postgres/file_database
 POSTGRES_DB=file_database
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=ps
 DATABASE_DATA_PATH=./docker/postgres/data
 
-MINIO_ROOT_USER=minio-user
-MINIO_ROOT_PASSWORD=minio-password
+UPLOAD_FOLDER_NAME=user_files
+ROOT_DIR=/file_storage
+PATH_SEPARATOR=/
+MAX_CONTENT_LENGTH=6M
