make all endpoints require valid JWT token

--- a/.env
+++ b/.env
@@ -16,3 +16,7 @@ UPLOAD_FOLDER_NAME=user_files
 ROOT_DIR=/file_storage
 PATH_SEPARATOR=/
 MAX_CONTENT_LENGTH=6M
+
+JWT_LIFETIME=15m
+REFRESH_LIFETIME=7d
+JWT_SECRET=bad_secret
