--- a/.env.local
+++ b/.env.local
@@ -9,3 +9,7 @@ POSTGRES_DB=file_database
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=ps
 DATABASE_DATA_PATH=./docker/postgres/local/data
+
+JWT_LIFETIME=15m
+REFRESH_LIFETIME=7d
+JWT_SECRET=bad_secret
