--- a/.env.minio
+++ b/.env.minio
@@ -16,3 +16,7 @@ POSTGRES_DB=minio_file_database
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=ps
 DATABASE_DATA_PATH=./docker/postgres/minio/data
+
+JWT_LIFETIME=15m
+REFRESH_LIFETIME=7d
+JWT_SECRET=bad_secret
